--- a/views/admin/partials/sidebar.ejs
+++ b/views/admin/partials/sidebar.ejs
@@ -129,13 +129,21 @@
               </a>
             </li>
 
+
+
             <li class="nav-item">
               <a class="nav-link" href="/admin/offers">
                 <i class="fas fa-box"></i>
                Offers
               </a>
-            </li class=nav-item>
-
+            </li>
+            
+            <li class="nav-link">
+              <a href="/admin/salesReport" class="nav-link">
+                <i class="fas fa-tags"></i>
+                sales Report
+              </a>
+            </li>
 
           </ul>
         </div>
