--- a/views/users/orderPlaced.ejs
+++ b/views/users/orderPlaced.ejs
@@ -12,7 +12,7 @@
   <div class="mt-4">
     <h3>Order Summary</h3>
     <p><strong>Order Date:</strong> <%= new Date(order.orderDate).toLocaleDateString() %></p>
-    <p><strong>Status:</strong> <%= order.status.charAt(0).toUpperCase() + order.status.slice(1) %></p>
+    <p><strong>Status:</strong> success</p>
     <p><strong>Payment Method:</strong> 
       <%= order.paymentMethod === "cashOnDelivery" ? "Cash on Delivery (COD)" : order.paymentMethod %>
     </p>
@@ -55,6 +55,7 @@
     <h3>Order Total</h3>
     <p><strong>Items Total:</strong> ₹<%= order.totalAmount %></p>
     <p><strong>Shipping Charge:</strong> ₹<%= order.shippingCharge %></p>
+
     <h4 class="fw-bold">Grand Total: ₹<%= order.grandTotal %></h4>
   </div>
 
